kube/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-demo
spec:
  tls:
    - hosts:
        - mi-demo.jackdra.com
      secretName: mi-demo-tls
  rules:
    - host: mi-demo.jackdra.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
